criando rota get /me
